[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sahil Jajodia", email = "jajodiasahil@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "langchain>=0.3.14",
    "langchain-ollama>=0.2.2",
    "langchain-community>=0.3.14",
    "python-dotenv>=1.0.1",
    "langchain-google-genai>=2.0.8",
    "streamlit~=1.30.0",
]
readme = "README.md"
requires-python = ">=3.9,<4.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_project"]
